<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-heavy"
            android:text="@string/editor_product_name_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/editor_product_name_hint"
            android:inputType="text"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-heavy"
            android:text="@string/editor_product_description_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProductDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/editor_product_description_hint"
            android:inputType="textMultiLine"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-heavy"
            android:text="@string/editor_product_price_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/editor_product_price_hint"
            android:inputType="numberDecimal"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-heavy"
            android:text="@string/editor_product_quantity_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProductQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/editor_product_quantity_hint"
            android:inputType="number"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-heavy"
            android:text="@string/editor_supplier_name_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSupplierName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/editor_supplier_name_hint"
            android:inputType="text"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-heavy"
            android:text="@string/editor_supplier_email_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editSupplierEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/editor_supplier_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/editor_selectImage"
        android:text="@string/editor_select_image"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/editor_image"
        android:src="@drawable/acme_anvil"
        android:scaleType="fitCenter"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>