<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            tools:src="@drawable/test_image" />

        <TextView
            android:id="@+id/detail_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="30sp"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            tools:text="Product description goes here" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/detail_text_supplier"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/detail_supplier_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-heavy"
                    android:textSize="20sp"
                    tools:text="Cyberdyne Systems" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_detail_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/detail_text_place_order"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/detail_text_quantity"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detail_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="36sp"
                    tools:text="8" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail_minusone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/minusone"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/adjust_inventory"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_detail_addone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plusone"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail_custom_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_sub_custom_amount"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_detail_custom_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/detail_add_custom_amount"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>